[project]
name = "snip"
version = "0.1.0"
description = "Automated video clip pipeline for Arabic and English content — Whisper transcription, Claude clip selection, ffmpeg render"
requires-python = ">=3.11"
dependencies = [
    # Core
    "openai-whisper>=20231117",
    "pysubs2>=1.7.0",
    "numpy>=1.26.4",
    # Optional: --groq-transcribe
    "openai>=1.0.0",
    # Optional: --speechmatics
    "speechmatics-batch>=0.4.8",
    "anthropic>=0.102.0",
]

[project.scripts]
snip = "snip:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
